--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
     "react-moment": "^0.7.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
