--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "final-form": "^4.2.0",
     "form-serialize": "^0.7.2",
+    "immutable": "^3.8.2",
     "moment": "^2.20.1",
     "moment-timezone": "^0.5.14",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
+    "react-final-form": "^3.1.0",
     "react-moment": "^0.7.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "sort-by": "^1.2.0"
+    "reselect": "^3.0.1",
+    "sort-by": "^1.2.0",
+    "styled-components": "^3.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
